# Engine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: shaders.cmake
shaders/: CMakeLists.txt  simple.frag  triangle.frag  triangle.vert
src/: CMakeLists.txt  engine.cc  engine.h  main.c  main.cc  main.cpp
src/app/: app.c  app.cc  app.h
src/backend/: CMakeLists.txt
src/backend/gl/: CMakeLists.txt
src/backend/gl/renderer/: CMakeLists.txt  error.cc  error.h  handle.cc  handle.h  handle_object.cc  handle_object.h  object.h  object_loader.cc  object_loader.h  plugin.cc  renderer.cc  renderer.h  shaders.cc.in  shaders.h  uniform_updater.cc  uniform_updater.h  window.h
src/backend/gl/renderer/shaders/: simple.frag  simple.vert
src/backend/gl/window/: window.h
src/backend/gl/window/glfw/: CMakeLists.txt  error.h  instance.h  plugin.cc  window.cc  window.h
src/backend/gl/window/sdl/: CMakeLists.txt  error.h  instance.h  plugin.cc  window.cc  window.h
src/backend/internal/glfw/: CMakeLists.txt  error.h  instance.cc  instance.h  window.cc  window.h
src/backend/internal/sdl/: CMakeLists.txt  error.h  instance.cc  instance.h  window.cc  window.h
src/backend/render/: data.cc  data.h  data_util.cc  data_util.h  factory.cc  factory.h  model.cc  model.h  model_controller.h  render.h  types.cc  types.h  vk_backend.cc  vk_backend.h  vk_buffer.cc  vk_buffer.h  vk_commander.cc  vk_commander.h  vk_config.cc  vk_config.h  vk_factory.cc  vk_factory.h  vk_image.cc  vk_image.h  vk_object.cc  vk_object.h  vk_types.cc  vk_types.h  vk_wrappers.cc  vk_wrappers.h
src/backend/render/gl/: error.cc  error.h  render.cc  render.h
src/backend/render/vk/: commander.cc  commander.h  config.cc  config.h  device.cc  device.h  device_selector.cc  device_selector.h  dispatchable.h  error.h  instance.cc  instance.h  object.cc  object.h  object_loader.cc  object_loader.h  render.cc  render.h  shaders.cc.in  shaders.h
src/backend/vk/: CMakeLists.txt
src/backend/vk/renderer/: CMakeLists.txt  buffer.cc  buffer.h  commander.cc  commander.h  config.cc  config.h  device.cc  device.h  device_dispatchable_factory.cc  device_dispatchable_factory.h  device_selector.cc  device_selector.h  dispatchable.h  entry.cc  error.h  handle.h  image.cc  image.h  instance.cc  instance.h  instance_dispatchable_factory.cc  instance_dispatchable_factory.h  internal.cc  internal.h  memory.h  object.cc  object.h  object_loader.cc  object_loader.h  physical_device.cc  physical_device.h  plugin.cc  renderer.cc  renderer.h  shader.cc.in  shader.h  shaders.cc.in  shaders.h  swapchain.cc  (+2 more)
src/backend/vk/renderer/shaders/: simple.vert
src/backend/vk/window/: window.h
src/backend/vk/window/glfw/: CMakeLists.txt  entry.cc  error.h  instance.h  plugin.cc  window.cc  window.h
src/backend/vk/window/sdl/: CMakeLists.txt  entry.cc  error.h  instance.cc  instance.h  plugin.cc  window.cc  window.h
src/backend/window/: factory.cc  factory.h  glfw.cc  glfw.h  instance.h  provider.cc  provider.h  window.h
src/backend/window/glfw/: error.h  instance.cc  instance.h  instance_internal.cc  instance_internal.h  window.cc  window.h  window_internal.cc  window_internal.h
src/backend/window/glfw/gl/: instance.h  window.h
src/backend/window/glfw/vk/: instance.h  window.cc  window.h
src/backend/window/sdl/: error.h  instance.cc  instance.h  instance_internal.cc  instance_internal.h  window.cc  window.h  window_internal.cc  window_internal.h
src/backend/window/sdl/gl/: instance.h  window.h
src/backend/window/sdl/vk/: instance.cc  instance.h  window.cc  window.h
src/base/: data_parser.cc  data_parser.h  data_types.h  defs.h  error.h  exception.h  io.c  io.cc  io.h  mesh_maker.cc  mesh_maker.h
src/engine/: CMakeLists.txt  cast_util.h  config.cc  config.h  data_util.cc  data_util.h  dll_loader.h  engine.cc  engine.h  error.h  fps_counter.cc  fps_counter.h  instance.h  loader.h  model.cc  model.h  plugin_api.h  renderer.h  renderer_entry.h  renderer_loader.h  runner.cc  runner.h  types.h  window.h  window_entry.h  window_loader.h
src/engine/render/: data_util.h  model.h  plugin.h  renderer.cc  renderer.h  renderer_loader.cc  renderer_loader.h  types.h
src/engine/window/: instance.h  plugin.h  window.cc  window.h  window_loader.cc  window_loader.h
src/entity/: singleton.h
src/glfw/: exception.h  window.cc  window.h
src/model/: camera_model.cc  camera_model.h  mesh_model.cc  mesh_model.h
src/render/: render.cc  render.h
src/shaders/: Makefile  cmake_install.cmake
src/view/: application.cc  application.h  renderer.cc  renderer.h  window.cc  window.h
src/vk/: command.c  command.cc  command.h  common.cc  common.h  context.c  context.cc  context.h  debug.cc  debug.h  device.c  device.cc  device.h  devices.cc  devices.h  exception.h  framebuffer.cc  framebuffer.h  graphics.cc  graphics.h  images.cc  images.h  instance.cc  instance.h  layers.cc  layers.h  messenger.cc  messenger.h  pipeline.cc  pipeline.h  queue.cc  queue.h  render.c  render.cc  render.h  render_pass.cc  render_pass.h  shader.cc  shader.h  surface.cc  (+8 more)
